# magicjar

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
src/: main.rs  preamble.sh
src/lib/: mod.rs
tests/: integration_test.rs
tests/fixtures/: fgbio_shim.py
